# unix-v11

./: .gitattributes  .gitignore  Cargo.toml  Ignitor_legacy.asm  build-aarch64.sh  build-amd64.sh  build.sh
efi/: Cargo.toml
efi/src/: ember.rs  main.rs  ram.rs  storage.rs
efi/src/aarch64/: mod.rs
efi/src/amd64/: mod.rs
kernel/: Cargo.toml  link.ld
kernel/.cargo/: config.toml
kernel/src/: ember.rs  main.rs  ram.rs  ramblock.rs  sort.rs
kernel/src/aarch64/: exceptions.rs  mod.rs
kernel/src/amd64/: exceptions.rs  mod.rs
kernel/src/device/: block.rs  mod.rs  nvme.rs
src/: main.rs  ram.rs
src/archs/: mod.rs
src/archs/aarch64/: mod.rs
