[package]
name = "unix-v11-efi"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "unix-v11-efi"
path = "src/main.rs"
test = false

[dependencies]
aarch64-cpu = "10.0.0"
linked_list_allocator = "0.10.5"
tock-registers = "0.9.0"
uefi = "0.35.0"
x86_64 = "0.15.2"
xmas-elf = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
