[package]
name = "unix-v11-kernel"
version = "0.0.1"
edition = "2021"

[dependencies]
aarch64-cpu = "10.0.0"
acpi = "5.2.0"
aml = "0.16.4"
fdt = "0.1.5"
linked_list_allocator = "0.10.5"
nvme = "0.2.2"
spin = "0.10.0"
tock-registers = "0.9.0"
x86_64 = "0.15.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
